# Sonic-1-2-2013-Decompilation

./: CMakeLists.txt
RSDKv4/: Debug.cpp  Debug.hpp  Drawing.cpp  ModAPI.cpp  Object.cpp  RetroEngine.cpp  RetroEngine.hpp  Scene.cpp  Sprite.cpp  Userdata.cpp  main.cpp
RSDKv4/NativeObjects/: PauseMenu.cpp  PauseMenu.hpp  RetroGameLoop.cpp
